--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "JWT": {
+    "Key": "This is my supper secret key for jwt - production",
+    "Issuer": "https://jwt.io/",
+    "Audience": "jwt"
+  },
   "ConnectionStrings": {
     "MyDB": "Data Source=.;Initial Catalog=LearnASPBE;Integrated Security=True"
   },
